@@ -1,12 +1,11 @@
 package dat3.security.dto;
 
 
+import dat3.security.entity.UserWithRoles;
 import lombok.Getter;
 import lombok.Setter;
-import dat3.security.entity.UserWithRoles;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -17,7 +16,7 @@ public class UserWithRolesResponse {
 
     public UserWithRolesResponse(UserWithRoles userWithRoles){
         this.userName = userWithRoles.getUsername();
-        this.roleNames = userWithRoles.getRoles().stream().map(role -> role.toString()).collect(Collectors.toList());
+        this.roleNames = userWithRoles.getRoles().stream().map(role -> role.getRoleName()).toList();
         this.email = userWithRoles.getEmail();
     }
 
